--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
               <div id="displayClock" class="clock">Time</div>
               <div id="User" class="user">User</div>
             </main>
+            <footer>
+              <p class="who">Created By <a href="https://www.linkedin.com/in/dharshana-ramesh-2aa0671ab/" target="_blank">Dharshana Ramesh</a> | All Rights Reserved! </p>
+          </footer>
         <script src="script.js"></script>
     </body>
 </html>
